--- a/Nodes/Shared/NavMenu.razor
+++ b/Nodes/Shared/NavMenu.razor
@@ -16,14 +16,14 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                <span class="oi oi-plus" aria-hidden="true"></span> Json Convert
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+ <!--     <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
-        </div>
+        </div>-->
     </nav>
 </div>
 
