--- a/Tracker/Tracker/Tracker.app/Shared/NavMenu.razor
+++ b/Tracker/Tracker/Tracker.app/Shared/NavMenu.razor
@@ -6,6 +6,10 @@
         </button>
     </div>
 </div>
+<MudNavLink Href="vehicleform" Match="NavLinkMatch.All">
+    Form Input
+</MudNavLink>
+
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
