--- a/Tracker/Tracker/Tracker.UI.App/Pages/NewVehicle.razor
+++ b/Tracker/Tracker/Tracker.UI.App/Pages/NewVehicle.razor
@@ -5,14 +5,28 @@
 @inject VehicleService VehicleService
 @inherits ComponentBase
 
+<MudPaper Class="d-flex pa-4">
 <MudForm>
-    <h3>Form Input</h3>
     <MudTextField Label="Make" Variant="Variant.Text" @bind-Value="vehicle.Make"></MudTextField>
     <MudTextField Label="Model" Variant="Variant.Text" @bind-Value="vehicle.Model"></MudTextField>
     <MudTextField Label="Reg No" Variant="Variant.Text" @bind-Value="vehicle.RegNo"></MudTextField>
     <MudTextField Label="Color" Variant="Variant.Text" @bind-Value="vehicle.Color"></MudTextField>
 </MudForm>
-<MudButton OnClick="Submit">Save</MudButton>
+</MudPaper>
+<MudPaper Class="d-flex pa-4">
+    <MudForm>
+        <MudTextField Label="Make" Variant="Variant.Text" @bind-Value="vehicle.Make"></MudTextField>
+        <MudTextField Label="Model" Variant="Variant.Text" @bind-Value="vehicle.Model"></MudTextField>
+        <MudTextField Label="Reg No" Variant="Variant.Text" @bind-Value="vehicle.RegNo"></MudTextField>
+        <MudTextField Label="Color" Variant="Variant.Text" @bind-Value="vehicle.Color"></MudTextField>
+    </MudForm>
+</MudPaper>
+<MudSpacer />
+<MudContainer>
+<MudSpacer />
+<MudButton OnClick="Submit" Variant="Variant.Filled">Save</MudButton>
+</MudContainer>
+
 
 
 @code {
