--- a/Tracker/Tracker/Tracker.UI.App/Shared/NavMenu.razor
+++ b/Tracker/Tracker/Tracker.UI.App/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
-﻿<MudNavMenu>
+﻿<MudMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="vehicleform" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Add Vehicle</MudNavLink>
     <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Fetch data</MudNavLink>
-</MudNavMenu>
+</MudMenu>
