--- a/Tracker/Tracker/Tracker.UI.App/wwwroot/CSS/site.css
+++ b/Tracker/Tracker/Tracker.UI.App/wwwroot/CSS/site.css
@@ -1,16 +1,4 @@
-﻿.uniform-tabs .mud-tab {
-    flex: 1 1 0%; /* This ensures each tab takes up an equal amount of space */
-    text-align: center;
-}
-
-.mud-tabs {
+﻿.mud-tab {
+    min-width: 400px;
     display: flex;
-}
-
-.mud-tab {
-    flex: 1;
-}
-
-.mud-tab {
-    width: 500px;
 }
