--- a/Tracker/Tracker/Tracker.UI.App/Pages/TabsPage.razor
+++ b/Tracker/Tracker/Tracker.UI.App/Pages/TabsPage.razor
@@ -1,19 +1,17 @@
 ﻿@page "/tabspage"
 <PageTitle>Tabs Page</PageTitle>
 
-<MudPaper Class="d-flex justify-start flex-grow-1 gap-4" Elevation="0">
 
+
+<MudPaper Class="d-flex justify-start flex-grow-1 gap-4" Elevation="0">
     <MudTabs Elevation="2" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
         <MudTabPanel Text="Add Vehicle">
-
-                    <NewVehicle/>
-
+            <NewVehicle />
         </MudTabPanel>
-        <MudTabPanel Text="Reminders" Width="650px">
-                    <FetchData/>
+        <MudTabPanel Text="Reminders">
+            <FetchData />
         </MudTabPanel>
     </MudTabs>
-
 </MudPaper>
 
 
